docs: swagger ReserveController atualizado
